2010-12-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, lib/oci8/bindtype.rb, test/test_oranumber.rb:
	    add OraNumber#has_decimal_part? and OCI8::BindType::BasicNumberType.

2010-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files, lib/oci8.rb.in, lib/oci8/.document, lib/oci8/properties.rb:
	    add OCI8.properties to get and set ruby-oci8 global setting.
	* ext/oci8/bind.c, lib/oci8/bindtype.rb: fix NCHAR support and add
	    OCI8.properties[:bind_string_as_nchar] to control charset form (CHAR or NCHAR)
	    when binding string values.
	    See: http://rubyforge.org/forum/forum.php?thread_id=48838&forum_id=1078

2010-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, ext/oci8/bind.c, lib/oci8/object.rb,
	  test/test_object.rb: fix a problem to assign NULL bind value
	    to object type bind variables.
	    (reported by Raimonds Simanovskis)
	* ext/oci8/oraconf.rb: fix for 32-bit ruby compiled on
	    x86_64 linux. (reported by Jason Renschler)
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    suppress warning: unknown conversion type character 'h' in format

2010-09-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/win32.c: undefine boolean to pass compilation on
	    Cygwin. (reported by Don Hill).
	* lib/oci8/encoding-init.rb, lib/oci8/encoding.yml: add a
	    mapping from ZHT16HKSCS to Big5-HKSCS when the latter
	    is available in ruby.

2010-09-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/extconf.rb: suppress warning
	    'use "ruby/util.h" instead of bare "util.h".'
	* test/test_break.rb: make tests insensitive to execution timing.

2010-09-10  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_array_dml.rb: delete workaround code. It now works
	    fine on rubinius head.

2010-09-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c: Don't use
	    rb_set_end_proc() when it isn't available.
	* ext/oci8/extconf.rb, lib/oci8.rb.in: add RUBY_ENGINE to